feat: ai threat intel
